--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build & Push to ACR
+name: Build & Deploy to Azure Container App from ACR
 
 on:
   workflow_dispatch:
@@ -17,6 +17,9 @@ jobs:
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: 🔧 Lowercase the repo name
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+
       - name: 🔐 Log in to Azure Container Registry
         uses: docker/login-action@v3
         with:
@@ -24,10 +27,7 @@ jobs:
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
 
-      - name: 🔧 Lowercase the repo path
-        run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
-
-      - name: 🛠️ Build and Push Docker image to ACR
+      - name: 🛠️ Build and Push Docker Image to ACR
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -36,3 +36,36 @@ jobs:
           tags: |
             ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:latest
             ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-push
+
+  #   steps:
+  #     - name: 🔐 Azure Login
+  #       uses: azure/login@v1
+  #       with:
+  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+  #     - name: 🔧 Lowercase the repo name
+  #       run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+
+  #     - name: 🚀 Deploy to Azure Container App from ACR
+  #       uses: azure/CLI@v1
+  #       with:
+  #         inlineScript: |
+  #           az config set extension.use_dynamic_install=yes_without_prompt
+
+  #           echo "🔗 Set ACR as the container registry"
+  #           az containerapp registry set \
+  #             --name ${{ env.AZURE_CONTAINER_APP_NAME }} \
+  #             --resource-group ${{ env.AZURE_GROUP_NAME }} \
+  #             --server ${{ secrets.ACR_LOGIN_SERVER }} \
+  #             --username ${{ secrets.ACR_USERNAME }} \
+  #             --password ${{ secrets.ACR_PASSWORD }}
+
+  #           echo "📦 Update container app with new image"
+  #           az containerapp update \
+  #             --name ${{ env.AZURE_CONTAINER_APP_NAME }} \
+  #             --resource-group ${{ env.AZURE_GROUP_NAME }} \
+  #             --image ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
