--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,35 +37,35 @@ jobs:
             ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:latest
             ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-push
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
 
-  #   steps:
-  #     - name: 🔐 Azure Login
-  #       uses: azure/login@v1
-  #       with:
-  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
+    steps:
+      - name: 🔐 Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  #     - name: 🔧 Lowercase the repo name
-  #       run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+      - name: 🔧 Lowercase the repo name
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
 
-  #     - name: 🚀 Deploy to Azure Container App from ACR
-  #       uses: azure/CLI@v1
-  #       with:
-  #         inlineScript: |
-  #           az config set extension.use_dynamic_install=yes_without_prompt
+      - name: 🚀 Deploy to Azure Container App from ACR
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
 
-  #           echo "🔗 Set ACR as the container registry"
-  #           az containerapp registry set \
-  #             --name ${{ env.AZURE_CONTAINER_APP_NAME }} \
-  #             --resource-group ${{ env.AZURE_GROUP_NAME }} \
-  #             --server ${{ secrets.ACR_LOGIN_SERVER }} \
-  #             --username ${{ secrets.ACR_USERNAME }} \
-  #             --password ${{ secrets.ACR_PASSWORD }}
+            echo "🔗 Set ACR as the container registry"
+            az containerapp registry set \
+              --name ${{ env.AZURE_CONTAINER_APP_NAME }} \
+              --resource-group ${{ env.AZURE_GROUP_NAME }} \
+              --server ${{ secrets.ACR_LOGIN_SERVER }} \
+              --username ${{ secrets.ACR_USERNAME }} \
+              --password ${{ secrets.ACR_PASSWORD }}
 
-  #           echo "📦 Update container app with new image"
-  #           az containerapp update \
-  #             --name ${{ env.AZURE_CONTAINER_APP_NAME }} \
-  #             --resource-group ${{ env.AZURE_GROUP_NAME }} \
-  #             --image ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
+            echo "📦 Update container app with new image"
+            az containerapp update \
+              --name ${{ env.AZURE_CONTAINER_APP_NAME }} \
+              --resource-group ${{ env.AZURE_GROUP_NAME }} \
+              --image ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
