--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,12 @@ on:
 
 permissions:
   contents: read
+  secrets: read
+
+env:
+  AZURE_CONTAINER_APP_NAME: m-yousaf-rana
+  AZURE_GROUP_NAME: huggingface-acr
+  REPO: ${{ github.repository }}
 
 jobs:
   build-and-push:
@@ -37,7 +43,6 @@ jobs:
             ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:latest
             ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
 
-
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
@@ -48,9 +53,6 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: 🔧 Lowercase the repo name
-        run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
-
       - name: 🚀 Deploy to Azure Container App from ACR
         uses: azure/CLI@v1
         with:
@@ -58,13 +60,13 @@ jobs:
             az config set extension.use_dynamic_install=yes_without_prompt
             echo "🔗 Set ACR as the container registry"
             az containerapp registry set \
-              --name ${{ secrets.AZURE_CONTAINER_APP_NAME }} \
-              --resource-group ${{ secrets.AZURE_GROUP_NAME }} \
+              --name ${{ env.AZURE_CONTAINER_APP_NAME }} \
+              --resource-group ${{ env.AZURE_GROUP_NAME }} \
               --server ${{ secrets.ACR_LOGIN_SERVER }} \
               --username ${{ secrets.ACR_USERNAME }} \
               --password ${{ secrets.ACR_PASSWORD }}
             echo "📦 Update container app with new image"
             az containerapp update \
-              --name ${{ secrets.AZURE_CONTAINER_APP_NAME }} \
-              --resource-group ${{ secrets.AZURE_GROUP_NAME }} \
+              --name ${{ env.AZURE_CONTAINER_APP_NAME }} \
+              --resource-group ${{ env.AZURE_GROUP_NAME }} \
               --image ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
