--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,38 +43,35 @@ jobs:
             ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push
+  runs-on: ubuntu-latest
+  needs: build-and-push
 
-    steps:
-      - name: 🔐 Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+  steps:
+    - name: 🔐 Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: 🔧 Lowercase the repo name again (for deploy job)
-        run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+    - name: 🔧 Set environment variables for deploy
+      run: |
+        echo "AZURE_CONTAINER_APP_NAME=m-yousaf-rana" >> $GITHUB_ENV
+        echo "AZURE_GROUP_NAME=huggingface-acr" >> $GITHUB_ENV
+        echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
 
-      - name: 🐞 Debug environment variables
-        run: |
-          echo "Container App Name: ${{ env.AZURE_CONTAINER_APP_NAME }}"
-          echo "Resource Group Name: ${{ env.AZURE_GROUP_NAME }}"
-          echo "Repo: ${{ env.REPO }}"
-
-      - name: 🚀 Deploy to Azure Container App from ACR
-        uses: azure/CLI@v1
-        with:
-          inlineScript: |
-            az config set extension.use_dynamic_install=yes_without_prompt
-            echo "🔗 Set ACR as the container registry"
-            az containerapp registry set \
-              -n ${{ env.AZURE_CONTAINER_APP_NAME }} \
-              -g ${{ env.AZURE_GROUP_NAME }} \
-              --server ${{ secrets.ACR_LOGIN_SERVER }} \
-              --username ${{ secrets.ACR_USERNAME }} \
-              --password ${{ secrets.ACR_PASSWORD }}
-            echo "📦 Update container app with new image"
-            az containerapp update \
-              -n ${{ env.AZURE_CONTAINER_APP_NAME }} \
-              -g ${{ env.AZURE_GROUP_NAME }} \
-              --image ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
+    - name: 🚀 Deploy to Azure Container App from ACR
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          az config set extension.use_dynamic_install=yes_without_prompt
+          echo "🔗 Set ACR as the container registry"
+          az containerapp registry set \
+            -n $AZURE_CONTAINER_APP_NAME \
+            -g $AZURE_GROUP_NAME \
+            --server ${{ secrets.ACR_LOGIN_SERVER }} \
+            --username ${{ secrets.ACR_USERNAME }} \
+            --password ${{ secrets.ACR_PASSWORD }}
+          echo "📦 Update container app with new image"
+          az containerapp update \
+            -n $AZURE_CONTAINER_APP_NAME \
+            -g $AZURE_GROUP_NAME \
+            --image ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
