--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ permissions:
   contents: read
 
 env:
-  AZURE_CONTAINER_APP_NAME: m-yousaf-rana
+  AZURE_CONTAINER_APP_NAME: yousaf-rana-app
   AZURE_GROUP_NAME: huggingface-acr
 
 jobs:
@@ -37,18 +37,17 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ secrets.ACR_LOGIN_SERVER }}/${{ github.repository }}:latest
-            ${{ secrets.ACR_LOGIN_SERVER }}/${{ github.repository }}:${{ github.sha }}
+            ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:latest
+            ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.REPO }}:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
-    env:
-      AZURE_CONTAINER_APP_NAME: m-yousaf-rana
-      AZURE_GROUP_NAME: huggingface-acr
-      REPO: ${{ github.repository }}
 
     steps:
+      - name: 🔧 Lowercase the repo name
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+
       - name: 🔐 Azure Login
         uses: azure/login@v1
         with:
